# chatgpt-web-share

./: .gitignore  .gitmodules  Caddyfile  Dockerfile  README.en.md  README.md  README.zh.md  docker-compose.yaml  startup.sh
backend/: .gitignore  alembic.ini  logging_config.yaml  main.py  manage.py  proxy.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0d790c2c26dc_add_uploaded_files_table.py  1f755ce557ab_add_gpt4_limits_add_model_name.py  333722b0921e_add_source_id_for_baseconversation.py  7d94b5503088_add_extra_info_in_uploadedfileinfo.py  aa3d85891014_baseline.py
backend/api/: chatgpt.py  database.py  enums.py  exceptions.py  file_provider.py  globals.py  models.py  response.py  revchatgpt.py  schema.py  users.py
backend/api/conf/: __init__.py  base_config.py  config.example.yaml  config.py  config_model.py  credentials.py
backend/api/config/: __init__.py  config.yaml.template
backend/api/database/: __init__.py  mongodb.py  sqlalchemy.py
backend/api/database/custom_types/: __init__.py  guid.py  pydantic_type.py  utc_datetime.py
backend/api/enums/: __init__.py  models.py  options.py  status.py
backend/api/middlewares/: __init__.py  request_statistics.py
backend/api/middlewares/asgi_logger/: __init__.py  middleware.py  utils.py
backend/api/models/: __init__.py  db.py  db_models.py  doc.py  doc_models.py  json.py  json_models.py  types.py
backend/api/models/doc/: __init__.py  openai_web_code.py  openai_web_code_interpreter.py
backend/api/routers/: api.py  arkose.py  chat.py  conv.py  files.py  logs.py  status.py  system.py  users.py
backend/api/schema/: conversation_schemas.py  openai_schemas.py  system_schemas.py  user_schemas.py
backend/api/schemas/: __init__.py  conversation_schemas.py  file_schemas.py  openai_schemas.py  status_schemas.py  system_schemas.py  user_schemas.py
backend/api/sources/: __init__.py  openai.py  openai_api.py  openai_web.py  revchatgpt.py
backend/config_templates/: config.yaml  credentials.yaml
backend/data/: credentials.yaml
backend/utils/: common.py  create_user.py  data_types.py  logger.py  proxy.py  store_statistics.py  sync_conversations.py  time_counter.py  time_queue.py
backend/utils/admin/: __init__.py  create_user.py  sync_conv.py
backend/utils/chat/: __init__.py  conv.py
backend/utils/conv/: __init__.py  parse_model_name.py
backend/utils/stats/: __init__.py  stats_data_types.py  store_statistics.py
frontend/: .env  .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc.cjs  (+8 more)
(+175 files in other folders)
