[tool.poetry]
name = "chatgpt-share-backend"
version = "0.4.0-alpha6"
description = ""
authors = ["moeakwak <moeakwak@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.21"
fastapi-users-db-sqlalchemy = "^6.0.1"
#revchatgpt = "5.0.0"
greenlet = "^2.0.2"
websockets = "^11.0.3"
setuptools = "^68.2.2"
python-dateutil = "^2.8.2"
pyyaml = "^6.0.1"
alembic = "^1.12.0"
colorlog = "^6.7.0"
asgiref = "^3.6.0"
aiocron = "^1.8"
ruamel-yaml = "^0.17.32"
beanie = "^1.22.6"
httpx = "^0.25.0"
strenum = "^0.4.15"
pydantic = "^1.10.9"
aiofiles = "^23.2.1"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
