[tool.poetry]
name = "chatgpt-share-backend"
version = "0.0.1"
description = ""
authors = ["moeakwak <moeakwak@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.21"
fastapi-users = "^12.1.2"
fastapi-users-db-sqlalchemy = "^6.0.1"
#revchatgpt = "5.0.0"
greenlet = "^3.0.1"
websockets = "^12.0"
setuptools = "^69.0.2"
python-dateutil = "^2.8.2"
pyyaml = "^6.0.1"
alembic = "^1.12.0"
colorlog = "^6.7.0"
asgiref = "^3.6.0"
aiocron = "^1.8"
ruamel-yaml = "^0.18.5"
beanie = "^1.22.6"
httpx = "^0.26.0"
strenum = "^0.4.15"
pydantic = "^2.5.2"
aiofiles = "^23.2.1"
aiohttp = "^3.8.5"
fastapi-cache2 = "^0.2.1"
pillow = "^10.1.0"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
